--- a/Final Project/templates/entry.html
+++ b/Final Project/templates/entry.html
@@ -1,13 +1,31 @@
 {% extends "base.html" %}
 {% block body %}
+<div class="container-fluid">
+<div class="title">
 <h2>{{the_title}}</h2>
-<form method="POST" action="/input_data" id="data_input">
-    <table>
-        <p>
-            Please Use This Website To Input Your Experimental Results:
-        </p>
+</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="entry">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sum_info">Summary of Projects</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Porject" aria-label="Search">
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+          <br>
+          <p>Please Use This Website To Input Your Experimental Results:</p>
+<form method="POST" action="/input_data" id="data_input"></form>
+    <table class="table table-striped table-hover">
         <tr>
-            <th>Project Code:</th>
+            <th scope="row">Project Code:</th>
             <td>
                     <select name="projects" form="data_input">
                             <option value="001-AAA">001-AAA</option>
@@ -18,19 +36,19 @@
             </td>
         </tr>   
         <tr>
-            <th>Temperature:</th>
+            <th scope="row">Temperature:</th>
             <td><input type="text" name="temperature"></td>
         </tr>
         <tr>
-            <th>Agitation Rate:</th>
+            <th scope="row">Agitation Rate:</th>
             <td><input type="text" name="rate"></td>
         </tr>
         <tr>
-            <th>Reaction Time:</th>
+            <th scope="row">Reaction Time:</th>
             <td><input type="text" name="reaction_time"></td>
         </tr>
         <tr>
-            <th>Solvent:</th>
+            <th scope="row">Solvent:</th>
             <td>
                 <select name="solvents" form="data_input">
                     <option value="MeCN">MeCN</option>
@@ -40,7 +58,7 @@
                 </select>
         </tr>
     </table>
-    <p>When you're ready, click this button:</p>
+    <p>When you're ready, click <em>submit</em> button or <em>reset y</em>our input:</p>
     <p><input value='Submit' type='submit'>
     <input value="Reset" type="reset"></p>
 </form>
@@ -54,5 +72,8 @@
         </select>
         <input value='Submit' type='submit'>
     </p>
-    </form>
+</form>
+<br>
+<p>If you want to add more parameters, please contact Admin:</p>
+</div>
 {% endblock %}
