--- a/Final Project/templates/single_project.html
+++ b/Final Project/templates/single_project.html
@@ -1,12 +1,34 @@
 {% extends "base.html" %}
 {% block body %}
-<h2>Here is the results for your project</h2>
-<table>
+<div class="title">
+<h3>Here is the results for your project</h2>
+</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-info">    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="entry">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sum_info">Summary of Results</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Porject" aria-label="Search">
+            <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+      <br>
+<table class="table table-striped table-hover">
+    <thead class="thead-light">
     <tr>
         {% for row_title in row_titles %}
-        <th>{{row_title}}</th>
+        <th scope="col">{{row_title}}</th>
         {% endfor %}
     </tr>
+    </thead>
+    <tbody>
     {% for items in the_data %}
     <tr>
         {% for item in items %}
@@ -14,6 +36,7 @@
         {% endfor %}
     </tr>
     {% endfor %}
+    </tbody>
 </table>
 <br>
 <p>
