--- a/Final Project/templates/sum_info.html
+++ b/Final Project/templates/sum_info.html
@@ -1,13 +1,18 @@
 
 {% extends "base.html" %}
 {% block body %}
-<h2>Here is the results for all projects</h2>
-<table>
+<div class="title">
+<h3>Here is the results for all projects</h2>
+</div>
+<table class="table table-striped table-hover">
+    <thead class="thead-light">
     <tr>
         {% for row_title in row_titles %}
-        <th>{{row_title}}</th>
+        <th scope="col">{{row_title}}</th>
         {% endfor %}
     </tr>
+    </thead>
+    <tbody>
     {% for items in the_data %}
     <tr>
         {% for item in items %}
@@ -15,6 +20,7 @@
         {% endfor %}
     </tr>
     {% endfor %}
+    </tbody>
 </table>
 <br>
 <p>
