add more parameters

--- a/Final Project/templates/results.html
+++ b/Final Project/templates/results.html
@@ -41,6 +41,14 @@
         <th>Solvent:</th>
         <td>{{ the_solvent }}</td>
     </tr>
+    <tr>
+        <th>Purity:</th>
+        <td>{{ the_purity }}</td>
+    </tr>
+    <tr>
+        <th>Yield:</th>
+        <td>{{ the_yield }}</td>
+    </tr>
 </table>
 <br>
 <p><a href="entry">Click here to input more results</a></p>
