--- a/Final Project/templates/base.html
+++ b/Final Project/templates/base.html
@@ -12,14 +12,9 @@
 
     </head>
     <body>
+    <div class="container-fluid">
         {% block body %}
         {% endblock %}
+    </div>
     </body>
-
-
-
-
-
-
-
 </html>
